--- a/Traders Mobile/app/src/main/res/layout/activity_login.xml
+++ b/Traders Mobile/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     tools:context="com.diplomna.diplomna.LoginActivity">
 
     <EditText
-        android:id="@+id/txtEmail"
+        android:id="@+id/textEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -16,7 +16,7 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="@string/emailHint"
-        android:inputType="textPersonName"
+        android:inputType="textEmailAddress"
         app:layout_constraintBottom_toTopOf="@+id/txtPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
@@ -35,9 +35,9 @@
         android:hint="@string/passwordHint"
         android:inputType="textPassword"
         app:layout_constraintBottom_toTopOf="@+id/loginButton"
-        app:layout_constraintEnd_toEndOf="@+id/txtEmail"
+        app:layout_constraintEnd_toEndOf="@+id/textEmail"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/txtEmail" />
+        app:layout_constraintStart_toStartOf="@+id/textEmail" />
 
     <Button
         android:id="@+id/loginButton"
