--- a/Traders Mobile/app/src/main/res/layout/activity_login.xml
+++ b/Traders Mobile/app/src/main/res/layout/activity_login.xml
@@ -60,9 +60,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
-        android:text="@string/register"
+        android:text="@string/register_login"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/loginButton"
