--- a/Traders Mobile/app/src/main/res/layout/activity_sub_categories.xml
+++ b/Traders Mobile/app/src/main/res/layout/activity_sub_categories.xml
@@ -4,16 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.diplomna.diplomna.Activities.MainActivityCustomer">
+    tools:context=".Activities.SubCategoriesActivity">
 
     <ListView
-        android:id="@+id/categories_list_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/subCatView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 
     <ProgressBar
