--- a/Traders Mobile/app/src/main/res/layout/activity_login.xml
+++ b/Traders Mobile/app/src/main/res/layout/activity_login.xml
@@ -15,7 +15,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:hint="@string/emailHint"
+        android:hint="Username"
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toTopOf="@+id/txtPassword"
         app:layout_constraintEnd_toEndOf="parent"
@@ -64,7 +64,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
         android:background="?android:attr/scrollbarTrackVertical"
-        android:text="@string/register_login"
+        android:text="Register"
         android:textAllCaps="true"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         android:textColor="@android:color/black"
